nova_tests/plan148/neg/tr_tuple_destructure_overlong_neg.nv
// EXPECT_COMPILE_ERROR E_TUPLE_DESTRUCTURE_ARITY
//
// Plan 148 Ф.4 ([M-codegen-unify-tuple-repr]) — negative (A3 guard):
// an OVER-LONG destructure pattern (3 names over a typed 2-tuple) is rejected.
// Complements tr_tuple_destructure_arity_neg (too-short pattern). With the
// typed mono'd struct there is no 3rd field to bind, so the field-by-field
// copy is caught at codegen with the `E_TUPLE_DESTRUCTURE_ARITY` diagnostic
// rather than an int-slot fall-through.

module neg.tr_tuple_destructure_overlong_neg

fn make_pair() -> (int, str) {
    (1, "two")
}

test "destructure 2-tuple as 3-tuple — rejected" {
    ro (a, b, c) = make_pair()
    assert(a == 1)
    assert(b == "two")
    assert(c == 0)
}
